# expat-nl-mortgage-rag

./: .dockerignore  .env.example  .gitignore  CODE_TODO.md  ChatApp_RAG_ollama_langchain.py  DASHBOARD_FEATURES.md  DEPLOYMENT.md  Dockerfile  EXECUTION_SUMMARY.md  PHASES.md  PR_test-ui.md  README.md  app.py  app_FastEmbed_UploadPDF_Chat.py  app_RAG_ollama_langchain.py  app_UploadPDF_Chat.py  app_phase1.py  app_wRAG.py  azure_platform_plan.md  code_critique.pptx  deploy_plans.md  docker-compose.yml  final_presentation.pptx  pyproject.toml  python_automation_api_plan.md  requirements.txt  simple_ollama_chatbot.py  vector_db_and_rag_concepts.md
codedocs/: ARCHITECTURE.md  DASHBOARD_FEATURES.md  DEPLOYMENT.md  DESIGN_AND_VERSION_CONTROL.md  QUICKSTART.md  REPORT.md  RESPONSIBLE_AI.md  SECURITY_AND_ERROR_HANDLING.md  agentic_frameworks_langgraph_plan.md  api_development_and_integration_plan.md  docker_containerization_plan.md  generative_ai_and_agents_plan.md  monitoring.md  security_and_monitoring_plan.md  software_engineering_fundamentals_plan.md
data/: golden_rag.json  ragas_scores.json
docs/: API.md  CONTRIBUTING.md  EXECUTION_SUMMARY.md  MONITORING_AND_EVALUATION.md  PRD.md  PRODUCTION_MLOPS_AIOPS.md  RESPONSIBLE_AI.md  TROUBLESHOOTING.md
lib/: __init__.py  a2ui.py  agents.py  agents_graph.py  chunking.py  documents.py  graph_kg.py  location.py  map_ui.py  mcp_client.py  provider.py  retrieval.py  sun_orientation.py
monitoring/: __init__.py  drift_detection.py
plan-docs/: langgraph-rag-mlflow-fastapi-build-test-monitor-deploy.md  plan-ab-testing-validation.md  (+8 more)
(+11 files in other folders)
